--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "history": "^4.10.1",
+    "history": "4.10.1",
     "nanoid": "^3.1.23",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
